2022-03-14 Gabriele Gorla <gorlik@yahoo.com>

	* support/regression/tests/div.c,
	  device/lib/s08/Makefile.in,
	  device/lib/hc08/Makefile.in,
	  device/lib/mos6502/Makefile.in,
	  device/lib/mos65c02/Makefile.in,
  	  device/lib/mos6502-stack-auto/Makefinle.in:
	  Enable div and ldviv for mos6502 and hc08/s08 ports.

2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  device/lib/lldiv.c:
	  Fix pdk heap corruption on returning large struct.
	* src/stm8/gen.c:
	  Fixes for large struct return.

2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* device/lib/div.c,
	  device/lib/ldiv.c,
	  device/lib/lldiv.c,
	  support/regression/tests/div.c,
	  device/lib/Makefile.in,
	  device/lib/*/Makefile.in:
	  Division functions, RFE #167.

2022-03-15 Benedikt Freisen <b.freisen AT gmx.net>

	* device/include/gcc_attr.h:
	  Compatibility macros for GCC attribute syntax.

2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  support/regression/tests/structreturn.c:
	  Enable struct / union return for hc08, s08, mos6502, ds390.
	* device/include/stdlib.h:
	  Provide prototypes for division functions.

2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/z80/gen.c,
	  src/SDCCsymt.c,
	  doc/sdccman.lyx,
	  support/regression/tests/structreturn.c:
	  struct / union return support for pdk and z80 and related.

2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCcse.c,
	  src/SDCCicode.c,
	  src/SDCCicode.h,
	  src/SDCClrange.c,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/ds390/ralloc.c,
	  src/mcs51/ralloc.c,
	  src/pic14/glue.c,
	  src/pic14/ralloc.c,
	  src/pic16/glue.c,
	  src/pic16/ralloc.c,
	  src/stm8/gen.c,
	  src/z80/ralloc.c:
	  struct / union return support for stm8.

2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* device/include/assert.h: